# snort-anomaly

./: README.md  confusion_shap.py  create_data.sh  requirements.txt  train_snort.py
anomaly-plugins/: CMakeLists.txt  README.md
anomaly-plugins/src/: CMakeLists.txt
anomaly-plugins/src/inspectors/: CMakeLists.txt
anomaly-plugins/src/inspectors/flow_ml/: CMakeLists.txt  flow_ml.cc  flow_ml.h  flow_ml_event_handler.cc  flow_ml_event_handler.h
anomaly-plugins/src/inspectors/interval_detector/: CMakeLists.txt  interval_detector.cc  interval_detector.h  interval_detector_event_handler.cc  interval_detector_event_handler.h
anomaly-plugins/src/loggers/: CMakeLists.txt
anomaly-plugins/src/loggers/alert_dos_json/: CMakeLists.txt  alert_dos_json.cc
libml/src/: libml.cc  libml.h
